# techx_vision_brige

./: .gitignore  README.md  start_vision.sh  test_sender.py  test_sender_local.py
install/: local_setup.sh  setup.sh
install/techx_vision_bridge/include/techx_vision_bridge/techx_vision_bridge/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/techx_vision_bridge/include/techx_vision_bridge/techx_vision_bridge/msg/detail/: target3_d__rosidl_typesupport_fastrtps_c.h  target3_d__rosidl_typesupport_fastrtps_cpp.hpp  target3_d__rosidl_typesupport_introspection_c.h  target3_d__type_support.h  (+1 more)
install/techx_vision_bridge/lib/techx_vision_bridge/: vision_bridge_node
install/techx_vision_bridge/share/ament_index/resource_index/package_run_dependencies/: techx_vision_bridge
install/techx_vision_bridge/share/ament_index/resource_index/rosidl_interfaces/: techx_vision_bridge
install/techx_vision_bridge/share/techx_vision_bridge/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/techx_vision_bridge/share/techx_vision_bridge/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_techx_vision_bridge__rosidl_generator_cExport-noconfig.cmake  export_techx_vision_bridge__rosidl_generator_cExport.cmake  export_techx_vision_bridge__rosidl_generator_cppExport.cmake  export_techx_vision_bridge__rosidl_generator_pyExport-noconfig.cmake  export_techx_vision_bridge__rosidl_generator_pyExport.cmake  export_techx_vision_bridge__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_techx_vision_bridge__rosidl_typesupport_fastrtps_cExport.cmake  export_techx_vision_bridge__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_techx_vision_bridge__rosidl_typesupport_fastrtps_cppExport.cmake  techx_vision_bridgeConfig.cmake  techx_vision_bridge__rosidl_typesupport_cExport-noconfig.cmake  techx_vision_bridge__rosidl_typesupport_cExport.cmake  techx_vision_bridge__rosidl_typesupport_cppExport-noconfig.cmake  techx_vision_bridge__rosidl_typesupport_cppExport.cmake  techx_vision_bridge__rosidl_typesupport_introspection_cExport-noconfig.cmake  techx_vision_bridge__rosidl_typesupport_introspection_cExport.cmake  techx_vision_bridge__rosidl_typesupport_introspection_cppExport-noconfig.cmake  techx_vision_bridge__rosidl_typesupport_introspection_cppExport.cmake
install/techx_vision_bridge/share/techx_vision_bridge/msg/: Target3D.idl
install/techx_vision_bridge/share/techx_vision_bridge/rust/: Cargo.toml
install/techx_vision_bridge/share/techx_vision_bridge/rust/src/: msg.rs
log/: latest_build
src/: DEPLOY_GUIDE.md
src/techx_vision_bridge/: CMakeLists.txt
src/techx_vision_bridge/config/: vision_bridge.yaml
src/techx_vision_bridge/launch/: vision_bridge.launch.py
src/techx_vision_bridge/src/: vision_bridge_node.cpp
(+3 files in other folders)
